# calc-app

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp
test/: CMakeLists.txt  test.cpp
